--- a/css/styles.css
+++ b/css/styles.css
@@ -378,7 +378,7 @@ header .studio {
 
   min-height: 584px;
   min-width: 408px;
-  padding: 24px;
+  padding: 72px 24px 24px 24px;
 
   border-radius: 4px;
   background-color: #fcfcfc;
@@ -417,6 +417,71 @@ header .studio {
 .modal-button .close:hover,
 .modal-button:focus {
   fill: #ffffff;
+}
+.modal-form {
+  width: 360px;
+}
+.modal-text {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+  margin-bottom: 16px;
+  color: var(--secondary-text-color);
+}
+.form-field {
+  margin-bottom: 8px;
+}
+.form-field .label {
+  display: block;
+  font-family: Roboto;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  text-align: left;
+  color: var(--icons-color);
+  margin-bottom: 4px;
+}
+.form-field .form-icon {
+  position: relative;
+}
+.form-field input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  background-color: transparent;
+  padding-left: 38px;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border-color: #4d5ae5;
+}
+.form-field .modal-svg {
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+input:focus + .modal-svg {
+  fill: #4d5ae5;
+}
+.form-field textarea {
+  width: 360px;
+  height: 120px;
+}
+.modal-submit {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 169px;
+  height: 56px;
+  background-color: #4d5ae5;
+  color: #ffffff;
+  border-radius: 4px;
+  padding: 16px 32px;
 }
 h2 {
   color: var(--secondary-text-color);
@@ -807,4 +872,61 @@ footer .studio {
 }
 .page-footer .icon-svg {
   fill: #f4f4fd;
+}
+.footer-form {
+  width: 453px;
+  height: 80px;
+  outline: 1px solid white;
+  margin-left: 80px;
+}
+.form-text {
+  display: block;
+  margin-bottom: 16px;
+  line-height: 1, 5;
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+}
+.form {
+  display: flex;
+  gap: 24px;
+}
+.footer-form .input {
+  background-color: transparent;
+  color: #ffffff;
+  width: 264px;
+  height: 40px;
+  border: 1px solid #ffffff;
+  margin-right: 24px;
+  font-size: 12px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  padding-left: 16px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+}
+.footer-form input::placeholder {
+  color: #ffffff;
+}
+.submit {
+  display: flex;
+  justify-content: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  align-items: center;
+  min-width: 165px;
+  height: 40px;
+  color: #ffffff;
+  background-color: #4d5ae5;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1, 5;
+  letter-spacing: 0.04em;
+  cursor: pointer;
+}
+.submit-link {
+  margin-left: 16px;
 }
