--- a/css/styles.css
+++ b/css/styles.css
@@ -456,8 +456,15 @@ header .studio {
   padding-left: 38px;
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border-color: var(--icons-color);
+}
+.form-field input:focus {
   border-color: #4d5ae5;
 }
+.form-field textarea:focus {
+  border-color: #4d5ae5;
+}
+
 .form-field .modal-svg {
   position: absolute;
   left: 16px;
@@ -471,6 +478,19 @@ input:focus + .modal-svg {
 .form-field textarea {
   width: 360px;
   height: 120px;
+}
+.conditions {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.terms {
+  margin-left: 8px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.33;
+  letter-spacing: 0.04em;
+  text-align: left;
 }
 .modal-submit {
   display: block;
