--- a/css/styles.css
+++ b/css/styles.css
@@ -132,6 +132,7 @@ table {
   --button-background-color: #f4f4fd;
   --button-border-color: #e7e9fc;
   --icons-color: #8e8f99;
+  --checkbox-background: #404bbf;
 }
 html {
   box-sizing: border-box;
@@ -461,10 +462,9 @@ header .studio {
 .form-field input:focus {
   border-color: #4d5ae5;
 }
-.form-field textarea:focus {
+.form-field .textarea:focus {
   border-color: #4d5ae5;
 }
-
 .form-field .modal-svg {
   position: absolute;
   left: 16px;
@@ -479,29 +479,86 @@ input:focus + .modal-svg {
   width: 360px;
   height: 120px;
 }
-.conditions {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.terms {
-  margin-left: 8px;
-  font-weight: 400;
+.textarea {
+  width: 100%;
+  height: 120px;
   font-size: 12px;
-  line-height: 1.33;
+  line-height: 1.17;
   letter-spacing: 0.04em;
-  text-align: left;
+  color: rgba(46, 47, 66, 0.4);
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  background-color: transparent;
+  padding: 8px 16px;
+  outline: transparent;
+  resize: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.textarea:focus {
+  border-color: #4d5ae5;
+}
+.conditions {
+  /*display: flex;
+  justify-content: center;
+  align-items: center;*/
+  margin-bottom: 24px;
+}
+/*.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+*/
+.terms {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: var(--icons-color);
+}
+.privacy {
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+}
+.visually-hidden:checked .check-svg {
+  background-color: var(--checkbox-background);
+  border: none;
+  fill: var(--button-background-color);
+}
+.policy-link {
+  color: var(--accent);
 }
 .modal-submit {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 169px;
+  min-width: 169px;
   height: 56px;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
   background-color: #4d5ae5;
   color: #ffffff;
   border-radius: 4px;
   padding: 16px 32px;
+  cursor: pointer;
+  border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 h2 {
   color: var(--secondary-text-color);
