--- a/css/styles.css
+++ b/css/styles.css
@@ -448,7 +448,7 @@ header .studio {
 .form-field .form-icon {
   position: relative;
 }
-.form-field input {
+.modal-input {
   width: 100%;
   height: 40px;
   border: 1px solid rgba(46, 47, 66, 0.4);
@@ -478,6 +478,9 @@ input:focus + .modal-svg {
 .form-field textarea {
   width: 360px;
   height: 120px;
+}
+.comment {
+  margin-bottom: 16px;
 }
 .textarea {
   width: 100%;
@@ -989,8 +992,7 @@ footer .studio {
 .submit {
   display: flex;
   justify-content: center;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Roboto", sans-serif;
   align-items: center;
   min-width: 165px;
   height: 40px;
